--- a/src/app2/package.json
+++ b/src/app2/package.json
@@ -4,8 +4,8 @@
   "license": "MIT",
   "scripts": {
     "ng": "ng",
-    "build": "ng build --prod --extract-css=false && npm run build-lib-prod",
-    "build-aot": "ng build --prod --extract-css=false --aot && npm run build-lib-prod",
+    "build": "ng build --prod && npm run build-lib-prod",
+    "build-aot": "ng build --prod --aot && npm run build-lib-prod",
     "build-lib": "webpack",
     "build-lib-prod": "node scripts_list_creator.js && npm run build-lib -- --env.NODE_ENV=production && cpx \"lib/loader.js\" dist",
     "prod-server": "npm run build && node server.js",
