--- a/src/menu/package.json
+++ b/src/menu/package.json
@@ -4,13 +4,13 @@
   "license": "MIT",
   "scripts": {
     "ng": "ng",
-    "build": "ng build --extract-css=false --prod && npm run bundle-loader-prod",
-    "build-aot": "ng build --extract-css=false --prod --aot && npm run bundle-loader-prod",
-    "bundle-loader": "webpack",
-    "bundle-loader-prod": "node scripts_list_creator.js && npm run bundle-loader -- --env.NODE_ENV=production && cpx \"lib/loader.js\" dist",
+    "build": "ng build --prod && npm run build-lib-prod",
+    "build-aot": "ng build --prod --aot && npm run build-lib-prod",
+    "build-lib": "webpack",
+    "build-lib-prod": "node scripts_list_creator.js && npm run build-lib -- --env.NODE_ENV=production && cpx \"lib/loader.js\" dist",
     "prod-server": "npm run build && node server.js",
     "prod-server-aot": "npm run build-aot && node server.js",
-    "start": "npm run bundle-loader && ng serve --port=4200",
+    "start": "npm run build-lib && ng serve --port=4200",
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e"
@@ -41,12 +41,22 @@
     "@types/jasmine": "~2.8.3",
     "@types/jasminewd2": "~2.0.2",
     "@types/node": "^6.0.101",
-    "codelyzer": "^4.0.1",
+    "angular2-template-loader": "^0.6.2",
+    "awesome-typescript-loader": "^3.5.0",
+    "babel-core": "^6.25.0",
+    "babel-loader": "^7.1.1",
+    "babel-preset-env": "^1.6.0",
+    "babel-preset-stage-0": "^6.24.1",
+    "codelyzer": "^4.2.1",
     "cpx": "1.5.0",
+    "css-loader": "^0.28.10",
     "express": "^4.16.2",
+    "file-loader": "^1.1.10",
     "file-system": "^2.2.2",
+    "html-loader": "^0.5.5",
     "jasmine-core": "~2.8.0",
     "jasmine-spec-reporter": "~4.2.1",
+    "json-loader": "^0.5.7",
     "karma": "~2.0.0",
     "karma-chrome-launcher": "~2.2.0",
     "karma-coverage-istanbul-reporter": "^1.2.1",
@@ -54,8 +64,10 @@
     "karma-jasmine-html-reporter": "^0.2.2",
     "protractor": "~5.1.2",
     "regex-sort": "^1.0.6",
+    "style-loader": "^0.19.0",
     "ts-node": "~4.1.0",
     "tslint": "~5.9.1",
-    "typescript": "~2.5.3"
+    "typescript": "~2.5.3",
+    "webpack": "^3.11.0"
   }
 }
