--- a/src/menu/package.json
+++ b/src/menu/package.json
@@ -17,7 +17,7 @@
   },
   "private": true,
   "dependencies": {
-    "@angular-redux/store": "^7.1.0",
+    "@angular-redux/store": "^7.1.1",
     "@angular/animations": "^5.2.7",
     "@angular/cdk": "^5.2.3",
     "@angular/common": "^5.2.7",
@@ -32,7 +32,7 @@
     "core-js": "^2.4.1",
     "redux": "^3.7.2",
     "rxjs": "^5.5.6",
-    "single-spa-angular-cli": "0.2.0"
+    "single-spa-angular-cli": "^0.2.3"
   },
   "devDependencies": {
     "@angular/cli": "1.6.8",
