--- a/src/app2/package.json
+++ b/src/app2/package.json
@@ -30,6 +30,7 @@
     "@angular/platform-browser-dynamic": "^5.2.7",
     "@angular/router": "^5.2.7",
     "core-js": "^2.4.1",
+    "eventing-bus": "1.2.0",
     "redux": "^3.7.2",
     "rxjs": "^5.5.6",
     "single-spa-angular-cli": "^0.2.3"
