--- a/src/app2/package.json
+++ b/src/app2/package.json
@@ -4,13 +4,11 @@
   "license": "MIT",
   "scripts": {
     "ng": "ng",
-    "build": "ng build --prod && npm run build-lib-prod",
-    "build-aot": "ng build --prod --aot && npm run build-lib-prod",
-    "build-lib": "webpack",
-    "build-lib-prod": "node scripts_list_creator.js && npm run build-lib -- --env.NODE_ENV=production && cpx \"lib/loader.js\" dist",
+    "build": "webpack --env.NODE_ENV=production && ng build --prod",
+    "build-aot": "webpack --env.NODE_ENV=production && ng build --prod --aot",
     "prod-server": "npm run build && node server.js",
     "prod-server-aot": "npm run build-aot && node server.js",
-    "start": "npm run build-lib && ng serve --port=4203",
+    "start": "webpack && ng serve --port=4203",
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e"
@@ -18,34 +16,34 @@
   "private": true,
   "dependencies": {
     "@angular-redux/store": "^7.1.1",
-    "@angular/animations": "^5.2.7",
-    "@angular/cdk": "^5.2.3",
-    "@angular/common": "^5.2.7",
-    "@angular/compiler": "^5.2.7",
-    "@angular/core": "^5.2.7",
-    "@angular/forms": "^5.2.7",
-    "@angular/http": "^5.2.7",
-    "@angular/material": "^5.2.3",
-    "@angular/platform-browser": "^5.2.7",
-    "@angular/platform-browser-dynamic": "^5.2.7",
-    "@angular/router": "^5.2.7",
+    "@angular/animations": "^5.2.8",
+    "@angular/cdk": "^5.2.4",
+    "@angular/common": "^5.2.8",
+    "@angular/compiler": "^5.2.8",
+    "@angular/core": "^5.2.8",
+    "@angular/forms": "^5.2.8",
+    "@angular/http": "^5.2.8",
+    "@angular/material": "^5.2.4",
+    "@angular/platform-browser": "^5.2.8",
+    "@angular/platform-browser-dynamic": "^5.2.8",
+    "@angular/router": "^5.2.8",
     "core-js": "^2.4.1",
     "eventing-bus": "1.2.0",
     "redux": "^3.7.2",
     "rxjs": "^5.5.6",
-    "single-spa-angular-cli": "^0.2.3"
+    "single-spa-angular-cli": "^0.3.2"
   },
   "devDependencies": {
     "@angular/cli": "1.6.8",
-    "@angular/compiler-cli": "^5.2.7",
-    "@angular/language-service": "^5.2.7",
+    "@angular/compiler-cli": "^5.2.8",
+    "@angular/language-service": "^5.2.8",
     "@types/jasmine": "~2.8.3",
     "@types/jasminewd2": "~2.0.2",
     "@types/node": "^6.0.101",
     "angular2-template-loader": "^0.6.2",
     "awesome-typescript-loader": "^3.5.0",
     "babel-core": "^6.25.0",
-    "babel-loader": "^7.1.1",
+    "babel-loader": "^7.1.4",
     "babel-preset-env": "^1.6.0",
     "babel-preset-stage-0": "^6.24.1",
     "codelyzer": "^4.2.1",
@@ -60,7 +58,7 @@
     "json-loader": "^0.5.7",
     "karma": "~2.0.0",
     "karma-chrome-launcher": "~2.2.0",
-    "karma-coverage-istanbul-reporter": "^1.2.1",
+    "karma-coverage-istanbul-reporter": "^1.4.2",
     "karma-jasmine": "~1.1.0",
     "karma-jasmine-html-reporter": "^0.2.2",
     "protractor": "~5.1.2",
