--- a/src/app1/package.json
+++ b/src/app1/package.json
@@ -15,6 +15,8 @@
     "babel-preset-stage-0": "^6.24.1",
     "file-loader": "^1.1.10",
     "json-loader": "^0.5.7",
+    "node-sass": "^4.7.2",
+    "sass-loader": "^6.0.7",
     "webpack": "^3.11.0",
     "webpack-dev-server": "^2.11.2"
   },
